--- a/instagrampuzzle1/css/main.css
+++ b/instagrampuzzle1/css/main.css
@@ -30,7 +30,7 @@ width: 100px;
 height: 50px;
 text-align: center;
 font-size: 14px;
-margin: 0px 0px 0px 0px;
+margin: 0px 0px -5px 0px;
 border: 5px solid black;
 padding: 10px 0px 0px 0px;
 }
@@ -68,11 +68,9 @@ opacity: 0.85;
 #info{
 width:150px;
 z-index:0;
-margin: 20px 20px 20px 20px;
-margin-top: 0px;
-margin-bottom: 0px;
+margin: 0px 0px 0px 5px;
 padding: 10px 10px 10px 10px;
-border:0px;
+display:none;
 }
 
 #wrapper{
